# Agentrix

./: .dockerignore  .gitmodules  Dockerfile  README.md
application/: README.md  pyproject.toml
application/src/agentrix_application/: __init__.py  prompt_compactor.py  tool_kv_trimmer.py  tool_ttl_predictor.py
application/tests/: test_prompt_compactor.py  test_tool_kv_trimmer.py  test_tool_ttl_predictor.py
benchmark/: .gitignore  README.md  download_agencybench.py  download_swebench.py  pyproject.toml
benchmark/coding_oracles/hidden/: django_regressions.py  ffmpeg_function_regressions.py  sqlite_function_regressions.py
benchmark/coding_tasks/: index.json
benchmark/coding_tasks/django_import_string_module/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/django_multipart_same_name/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/django_non_atomic_view_copy/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/django_session_cache_delete/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/ffmpeg_bprint_growth/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/ffmpeg_dict_count/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/ffmpeg_fifo_readable/: mutation.patch  public_test.py  task.json
benchmark/coding_tasks/ffmpeg_parse_duration/: mutation.patch  public_test.py  task.json
benchmark/configs/: benchmark.yaml  django_agentrix_case_specs.json  django_agentrix_commit24_specs.json  ffmpeg_agentrix_case_specs.json  ffmpeg_agentrix_commit24_specs.json  hotpot_agentrix_long_prefix_100.jsonl  langgraph_agent_concurrent_tasks.jsonl  langgraph_agent_mixed_tasks.jsonl  langgraph_agent_tasks.jsonl  langgraph_cacheblend_rag_tasks.jsonl  langgraph_fork_cacheblend_20_tasks.jsonl  langgraph_rag_corpus_files.txt  lmcache_cacheblend_rag.yaml  sqlite_agentrix_case_specs.json  sqlite_agentrix_commit24_specs.json
benchmark/data/: agencybench_v2.jsonl  agentboard.jsonl  appworld.jsonl
benchmark/scripts/: benchmark_fork_attention_negative.py  benchmark_prompt_tool_result_context.py  benchmark_tool_kv_ttl_memory.py  build_django_agentrix_cases.py  build_hotpot_agentrix_cases.py  evaluate_prompt_tool_result_compaction.py  evaluate_tool_ttl_predictor.py  fork_attention_operator_ncu.py  import_agent_datasets.py  plot_fork_attention_ncu_matrix.py  run_cacheblend_langgraph_rag.sh  run_coding_agent_demo.sh  run_coding_agent_demo_web_host.sh  run_coding_agent_e2e.sh  run_django_agentrix_dp.sh  run_flash_attention_benchmark.sh  run_fork_attention_ncu.sh  run_fork_attention_ncu_matrix.sh  run_fork_attention_nsight.sh  run_hotpot_agentrix_e2e.sh  run_langgraph_fork_cacheblend_20_e2e.sh  run_langgraph_prompt_compaction_ablation.sh  run_lmcache_policy_comparison.sh  run_lmcache_tiered_smoke.sh  run_main_experiment.sh  run_offload_backend_comparison.sh  run_sglang_benchmark.sh  run_sglang_lmcache_benchmark.sh  run_vllm_benchmark.sh  run_vllm_dataset_matrix.sh  run_vllm_dp_full_dataset.sh  run_vllm_dp_reload_comparison.sh  run_vllm_fanout_matrix.sh  run_weblinx_8dp.sh  summarize_fork_attention_ncu.py  summarize_fork_attention_ncu_matrix.py
benchmark/src/: __init__.py  accuracy.py  agent_context_redundancy.py  api_runner.py  cacheblend_rag_report.py  cli.py  coding_agent_demo.py  coding_agent_demo_tui.py  coding_agent_demo_web.py  coding_agent_e2e_runner.py  coding_agent_gpu_telemetry.py  coding_agent_memory.py  coding_agent_tools.py  coding_task_oracle.py  commit_case_specs.py  data.py  django_agentrix_runner.py  dp_reload_report.py  hotpot.py  hotpot_offload_report.py  langgraph_e2e_report.py  langgraph_runner.py  lmcache_policy_report.py  main_experiment_report.py  metrics.py  models.py  offload_comparison_report.py  offload_revisit_trace.py  reporting.py  resource_sampler.py  synthetic.py  telemetry.py  tokens.py  weblinx_data.py  weblinx_runner.py
benchmark/tests/: test_accuracy.py  test_agent_context_redundancy.py  test_api_runner_routing.py  test_build_django_agentrix_cases.py  test_cacheblend_rag_report.py  test_cacheblend_switch.py  test_coding_agent_demo.py  test_coding_agent_e2e_runner.py  test_coding_agent_memory.py  test_coding_agent_tools.py  test_coding_task_manifests.py  test_commit_case_specs.py  test_data_and_synthetic.py  test_django_agentrix_runner.py  test_hotpot.py  test_hotpot_offload_report.py  test_langgraph_e2e_report.py  test_langgraph_runner.py  test_lmcache_policy_report.py  test_main_experiment_report.py  test_metrics.py  test_offload_comparison_report.py  test_offload_revisit_trace.py  test_reporting.py  test_resource_sampler.py  test_telemetry.py  test_tokens.py  test_weblinx_data.py  test_weblinx_runner.py
docs/: agentrix_system_overview.md  (+22 more)
(+41 files in other folders)
