[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrix-bench"
version = "0.1.0"
description = "Shared-prefix Agent attention benchmark from benchmark.md"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "PyYAML>=6.0",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
agent = [
  "langgraph>=1.2,<2",
]
data = [
  "datasets>=2.19",
  "huggingface_hub>=0.23",
  "Pillow>=10.0",
]
demo = ["aiohttp>=3.9,<4", "textual>=0.80,<2"]
test = ["pytest>=8.0", "langgraph>=1.2,<2"]

[project.scripts]
agentrix-bench = "cli:main"
agentrix-langgraph = "langgraph_runner:main"
agentrix-cacheblend-report = "cacheblend_rag_report:main"
agentrix-langgraph-e2e-report = "langgraph_e2e_report:main"
agentrix-coding-demo = "coding_agent_demo_tui:main"
agentrix-coding-demo-web = "coding_agent_demo_web:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "accuracy",
  "api_runner",
  "cacheblend_rag_report",
  "cli",
  "data",
  "metrics",
  "models",
  "langgraph_runner",
  "langgraph_e2e_report",
  "agent_context_redundancy",
  "coding_agent_e2e_runner",
  "coding_agent_memory",
  "coding_agent_demo",
  "coding_agent_demo_tui",
  "coding_agent_demo_web",
  "coding_agent_gpu_telemetry",
  "coding_agent_tools",
  "coding_task_oracle",
  "commit_case_specs",
  "django_agentrix_runner",
  "resource_sampler",
  "reporting",
  "synthetic",
  "telemetry",
  "tokens",
  "weblinx_data",
  "weblinx_runner",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "../application/src"]
